--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@
     position: absolute;
     right: 30px;
     top:60px;
-    background-color: white;
+    background-color: var(--white);
     width: 100px;
     height: auto;
     border: 1px solid var(--very-light-pink);
@@ -132,12 +132,13 @@
     position: absolute;
     top: 60px;
     left:0;
+    background-color: var(--white);
   }
   .mobile-menu a {
     text-decoration: none;
     color: var(--black);
     font-weight: bold;
-    /* margin-bottom: 24px; */
+
   }
   .mobile-menu ul {
     padding: 0;
@@ -167,8 +168,8 @@
     box-sizing: border-box;
     position: absolute;
     right: -1px;
-    top: -1px;
-    background-color: white;
+    top: 60px;
+    background-color: var(--white);
     border: solid 1px;
     border-color: var(--very-light-pink);
     border-radius: 0 0 12px 12px;
@@ -241,10 +242,49 @@
     font-weight: bold;
     height: 50px;
   }
-  @media (max-width: 640px) {
-    .product-detail {
-      width: 100%;
-    }
+
+  /* Listado de productos */
+
+  .cards-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 240px);
+    gap: 26px;
+    place-content: center;
+    margin-top:24px;
+  }
+  .product-card {
+    width: 240px;
+  }
+  .product-card img {
+    width: 240px;
+    height: 240px;
+    border-radius: 20px;
+    object-fit: cover;
+  }
+  .product-info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 12px;
+  }
+  .product-info figure {
+    margin: 0;
+  }
+  .product-info figure img {
+    width: 35px;
+    height: 35px;
+  }
+  .product-info div p:nth-child(1) {
+    font-weight: bold;
+    font-size: var(--md);
+    margin-top: 0;
+    margin-bottom: 4px;
+  }
+  .product-info div p:nth-child(2) {
+    font-size: var(--sm);
+    margin-top: 0;
+    margin-bottom: 0;
+    color: var(--very-light-pink);
   }
 
   /* Media queries */
@@ -262,6 +302,19 @@
     }
     .desktop-menu{
       display: none;
+    }
+    .my-order {
+      width: 100%;
+    }
+    .cards-container {
+      grid-template-columns: repeat(auto-fill, 140px);
+    }
+    .product-card {
+      width: 140px;
+    }
+    .product-card img {
+      width: 140px;
+      height: 140px;
     }
   }
 
